--- a/list.html
+++ b/list.html
@@ -7,16 +7,27 @@
 </head>
 <body>
  <script src="app.js"> </script>    
-<div ng-app="myShoppingList" ng-controller="myCtrl">
-    <ul>
-     <li ng-repeat ="product in products "> {{product}}
-       <span ng-click="removeItem($index)"> &times; </span>
+<div ng-app="myShoppingList" ng-cloak ng-controller="myCtrl" class="w3-card-2 w3-margin" style="max-width:400px;">
+     <header class="w3-container w3-light-grey w3-padding-16">
+    <h3>My Shopping List</h3>
+  </header>
+    <ul class="w3-ul">
+     <li ng-repeat ="product in products " class="w3-padding-16"> {{product}}
+       <span ng-click="removeItem($index)" class="w3-right w3-margin-right"> &times; </span>
         </li>
        
     </ul>
-    <input type="text" ng-model="addMe"/>
-    <button ng-click="addItem()">Add</button>
-    <p>{{errorText}}</p>
+    <div class="w3-container w3-light-grey w3-padding-16">
+    <div class="w3-row w3-margin-top">
+      <div class="w3-col s10">
+        <input placeholder="Add shopping items here" ng-model="addMe" class="w3-input w3-border w3-padding">
+      </div>
+      <div class="w3-col s2">
+        <button ng-click="addItem()" class="w3-btn w3-padding w3-green">Add</button>
+      </div>
+    </div>
+    <p class="w3-padding-left w3-text-red">{{errorText}}</p>
+  </div>
 </div>    
 
     </body>
